# agentic-dev

./: .gitignore  CLAUDE.md  README.md  prompt_for_prod_ready.txt  pyproject.toml  reference_plan_for_prod_ready.md  todo.txt
.github/workflows/: ci.yml
docs/: agents.md  architecture.md  documents.md  user-guide.md
docs/superpowers/specs/: 2026-03-28-agentic-dev-agency-design.md  2026-04-04-crash-resilience-design.md  2026-04-07-adopt-and-sync-design.md  2026-04-11-figma-first-class-design-input.md
src/agentic_dev/: __init__.py  cli.py  concurrency.py  config.py  exceptions.py  tracks.py
src/agentic_dev/agents/: base.py  figma_tools.py  registry.py
tests/: conftest.py  test_cli.py  test_concurrency.py  test_config.py  test_tracks.py
tests/e2e/: MANUAL_RUNBOOK.md  conftest.py  test_update_support.py
tests/e2e/fixtures/cli_demo_adopt/: .gitignore  pyproject.toml
tests/e2e/fixtures/cli_demo_adopt/src/cli_demo_adopt/: __init__.py  cli.py
tests/test_agents/: test_base.py  test_definitions.py  test_figma_tools.py  test_registry.py
tests/test_claude/: test_activity.py  test_llm_parser.py  test_output_parser.py  test_rate_limiter.py  test_runner.py  test_session.py
tests/test_discovery/: test_agent.py  test_override.py
tests/test_documents/: test_diff.py  test_models.py  test_reconciliation.py  test_scoping.py  test_store.py
tests/test_logging/: test_context.py  test_dashboard.py  test_events.py  test_formatters.py  test_handlers.py  test_setup.py
tests/test_mcp/: test_catalog.py  test_claude_settings.py  test_setup.py
tests/test_onboarding/: test_analyzer.py  test_environment.py  test_figma.py  test_figma_annotations.py  test_figma_sources.py  test_models.py  test_onboarding_cli.py  test_secrets.py  test_structure_detector.py
tests/test_orchestrator/: test_adoption.py  test_agent_bridge.py  test_checkpoint.py  test_engine.py  test_integration_runner.py  test_qa_cycle.py  test_shutdown.py  test_sprint_runner.py  test_sync.py  test_uat_composer.py
tests/test_prompts/: test_architect_template.py  test_renderer.py
tests/test_state/: test_manager.py  test_models.py  test_transitions.py
tests/test_uat/: test_aggregator.py  test_dispatcher.py  test_preinstall.py  test_prereqs.py  test_secrets_gate.py  test_teardown.py  test_validator.py
tests/test_workspace/: test_claude_md.py  test_git.py  test_gitignore.py  test_manager.py
(+156 files in other folders)
