[project]
name = "agentic-dev"
version = "0.1.0"
description = "Autonomous software development agency powered by Claude Code CLI"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
agentic-dev = "agentic_dev.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentic_dev" = [
    "prompts/templates/*.j2",
    "agents/definitions/*.yml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that make real Claude API calls (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
