[project]
name = "cli-demo-adopt"
version = "0.1.0"
description = "Tiny pre-existing CLI used as the adoption-test source for agentic-dev runtime-UAT validation."
requires-python = ">=3.10"
dependencies = ["typer>=0.12"]

[project.scripts]
cli-demo-adopt = "cli_demo_adopt.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
